--- a/template/package.json
+++ b/template/package.json
@@ -26,7 +26,13 @@
   },
   "dependencies": {
     "vue": "^2.5.2"{{#router}},
-    "vue-router": "^3.0.1"{{/router}}
+    "vue-router": "^3.0.1"{{/router}},
+    {{#axios}}
+    "axios": "^0.18.0",
+    {{/axios}}
+    {{#vuex}}
+    "vuex": "^3.1.0"
+    {{/vuex}}
   },
   "devDependencies": {
     {{#lint}}
