--- a/template/package.json
+++ b/template/package.json
@@ -109,11 +109,15 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "webpack-bundle-analyzer": "^2.9.0",
+    "less-loader": "^4.1.0",
     "node-notifier": "^5.1.2",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
+    "style-loader": "^0.23.1",
+    "stylus-loader": "^3.0.2",
     "shelljs": "^0.7.6",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
