--- a/template/package.json
+++ b/template/package.json
@@ -36,7 +36,8 @@
     "element-ui": "2.4.6",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
-    "nprogress": "0.2.0"
+    "nprogress": "0.2.0",
+    "mockjs": "1.0.1-beta3"
   },
   "devDependencies": {
     {{#lint}}
