--- a/template/package.json
+++ b/template/package.json
@@ -40,6 +40,7 @@
     "copy-webpack-plugin": "4.5.2",
     "css-loader": "1.0.0",
     "eslint": "4.19.1",
+    "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "2.0.0",
     "eslint-plugin-vue": "4.7.1",
