--- a/template/package.json
+++ b/template/package.json
@@ -43,6 +43,7 @@
     "eslint-config-standard": "^12.0.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-loader": "2.0.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-vue": "4.7.1",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
