--- a/template/package.json
+++ b/template/package.json
@@ -1,33 +1,102 @@
 {
   "name": "vue-admin-template",
-  "version": "3.9.0",
+  "version": "1.0.0",
   "license": "MIT",
-  "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
-  "author": "Pan <panfree23@gmail.com>",
+  "description": "vue-elementui-admin-template",
+  "author": "yinhang@dankegongyu.com",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
     "build:report": "npm_config_report=true npm run build",
-    "lint": "eslint --ext .js,.vue src",
-    "test": "npm run lint",
-    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
+    "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
+    {{#if_eq runner "jest"}}
+    "unit": "jest --config test/unit/jest.conf.js --coverage",
+    {{/if_eq}}
+    {{#if_eq runner "karma"}}
+    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+    {{/if_eq}}
+    {{#e2e}}
+    "e2e": "node test/e2e/runner.js",
+    {{/e2e}}
+    {{#if_or unit e2e}}
+    "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}",
+    {{/if_or}}
+    {{#lint}}
+    "lint": "eslint --ext .js,.vue src{{#unit}} test/unit{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"
+    {{/lint}}
   },
   "dependencies": {
+    "vue": "2.5.17",
+    {{#router}}
+    "vue-router": "3.0.1",
+    {{/router}}{{#axios}}
     "axios": "0.18.0",
+    {{/axios}}{{#vuex}}
+    "vuex": "3.0.1",
+    {{/vuex}
     "element-ui": "2.4.6",
     "js-cookie": "2.2.0",
     "mockjs": "1.0.1-beta3",
     "normalize.css": "7.0.0",
-    "nprogress": "0.2.0",
-    "vue": "2.5.17",
-    "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "nprogress": "0.2.0"
   },
   "devDependencies": {
+    {{#lint}}
+    "babel-eslint": "^7.2.3",
+    "eslint": "^4.15.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-vue": "^4.0.0",
+    {{#if_eq lintConfig "standard"}}
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.2.0",
+    {{/if_eq}}
+    {{#if_eq lintConfig "airbnb"}}
+    "eslint-config-airbnb-base": "^11.3.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-import": "^2.7.0",
+    {{/if_eq}}
+    {{/lint}}
+    {{#if_eq runner "jest"}}
+    "babel-jest": "^21.0.2",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "jest": "^22.0.4",
+    "jest-serializer-vue": "^0.3.0",
+    "vue-jest": "^1.0.2",
+    {{/if_eq}}
+    {{#if_eq runner "karma"}}
+    "cross-env": "^5.0.1",
+    "karma": "^1.4.1",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
+    "karma-sinon-chai": "^1.3.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "^2.0.2",
+    "mocha": "^3.2.0",
+    "chai": "^4.1.2",
+    "sinon": "^4.0.0",
+    "sinon-chai": "^2.8.0",
+    "inject-loader": "^3.0.0",
+    "babel-plugin-istanbul": "^4.1.1",
+    "phantomjs-prebuilt": "^2.1.14",
+    {{/if_eq}}
+    {{#e2e}}
+    "babel-register": "^6.22.0",
+    "chromedriver": "^2.27.2",
+    "cross-spawn": "^5.0.1",
+    "nightwatch": "^0.9.12",
+    "selenium-server": "^3.0.1",
+    {{/e2e}}
     "autoprefixer": "8.5.0",
     "babel-core": "6.26.0",
-    "babel-eslint": "8.2.6",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
     "babel-loader": "7.1.5",
     "babel-plugin-syntax-jsx": "6.18.0",
@@ -39,15 +108,6 @@
     "compression-webpack-plugin": "2.0.0",
     "copy-webpack-plugin": "4.5.2",
     "css-loader": "1.0.0",
-    "eslint": "4.19.1",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-friendly-formatter": "4.0.1",
-    "eslint-loader": "2.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-vue": "4.7.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-standard": "^4.0.0",
     "eventsource-polyfill": "0.9.6",
     "file-loader": "1.1.11",
     "friendly-errors-webpack-plugin": "1.7.0",
