--- a/template/package.json
+++ b/template/package.json
@@ -34,7 +34,7 @@
     "axios": "0.18.0",
     {{/axios}}{{#vuex}}
     "vuex": "3.0.1",
-    {{/vuex}
+    {{/vuex}}
     "element-ui": "2.4.6",
     "js-cookie": "2.2.0",
     "mockjs": "1.0.1-beta3",
